# whimsy

./: .rustfmt.toml  Cargo.toml  Makefile  README.md  build.rs
src/: app.rs
src/ui/: mod.rs  resource.xml  task_row.ui  window.ui
src/ui/flip_button/: imp.rs  mod.rs
src/ui/task_object/: imp.rs  mod.rs
src/ui/task_row/: imp.rs  mod.rs
src/ui/window/: imp.rs  mod.rs
